SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

New Plugins for H2, PostgreSQL and DB2
	These plugins provide source tabs for stored procedures, views and triggers.
	They also provide details tab for sequences and triggers	

New Plugin for Sybase ASE by Ken McCullough
  	The plugin allows to script the code of Views and Stored Procedures of the 
  	Sybase ASE DB.

Oracle Plugin
  - Added support for executing create procedure and create function blocks 
    delimited by a single "/" such as is supported in SQL-Plus.  Also, added 
    support for the "@" construct which is used to specify a script file to be 
    included.
  - Source tab for views now presents source code that is formatted and 
    correctly formed to allow it to be used as an SQL statement to replicate 
    the view.
  - Added the schema name to the SID for session nodes - it's easier now to 
    find the session you are looking for.

Informix Plugin
  - Is now using the code reformatter for formatting the Source Tab for views 
    The code reformatter was written by Gerd Wagner and previoously located in 
    the EditExtras plugin.  It has been moved to core so that other plugins can 
    take advantage of this capability.

DBCopy Plugin 
  - The error message for SQLExceptions now includes the SQL statement that was 
    last executed (including bind variable values if it was a PreparedStatement)


Bug-Fixes:

Updated French translation strings (Thanks to Erwan Duroselle)

1617839 Two new lines with white spaces in between do not separate SQLs when 
        SQLs are executed without selection.

1639680 Cannot export smallint and decimal to MS Excel

1635259 Session menu has two items with mnemonic "T"

1639662 Block comments can be ended prematurely
        (Thanks to Sam Polak for the patch)
